syntax = "proto3";

package skysign_proto;

import "google/api/annotations.proto";
import "common.proto";

option java_package = "proto.skysign";
option java_multiple_files = true;
option go_package = ".;skysign_proto";

service AssignAssetsToFlightplanService {
    rpc ChangeNumberOfVehicles (ChangeNumberOfVehiclesRequest) returns (ChangeNumberOfVehiclesResponse) {
        option (google.api.http) = {
            put: "/api/v1/flightplans/{id}/numberofvehicles"
            body: "*"
        };
    };

    rpc GetAssignments (GetAssignmentsRequest) returns (GetAssignmentsResponse) {
        option (google.api.http) = {
            get: "/api/v1/flightplans/{id}/assignments"
        };
    };

    rpc UpdateAssignments (UpdateAssignmentsRequest) returns (UpdateAssignmentsResponse) {
        option (google.api.http) = {
            put: "/api/v1/flightplans/{id}/assignments"
            body: "*"
        };
    };
}

message ChangeNumberOfVehiclesRequest {
    string id = 1;
    int32 number_of_vehicles = 2;
}

message ChangeNumberOfVehiclesResponse {
    string id = 1;
    int32 number_of_vehicles = 2;
}

message GetAssignmentsRequest {
    string id = 1;
}

message GetAssignmentsResponse {
    string id = 1;
    repeated Assignment assignments = 2;
}

message UpdateAssignmentsRequest {
    string id = 1;
    repeated Assignment assignments = 2;
}

message UpdateAssignmentsResponse {
    string id = 1;
    repeated Assignment assignments = 2;
}
