syntax = "proto3";

package skysign_proto;

import "proto/common.proto";

option java_package = "proto.skysign.event";
option java_multiple_files = true;
option go_package = ".;skysign_proto";

message CommunicationIdGaveEvent {
    string communication_id = 1;
}

message CommunicationIdRemovedEvent {
    string communication_id = 1;
}

message FleetIDGaveEvent {
    string fleet_id = 1;
    int32 number_of_vehicles = 2;
}

message FleetIDRemovedEvent {
    string fleet_id = 1;
}

message FlightplanExecutedEvent {
    string flightplan_id = 1;
    Flightplan flightplan = 2;
}

message FleetCopiedEvent {
    string original_fleet_id = 1;
    string new_fleet_id = 2;
}

message VehicleCopiedEvent {
    string fleet_id = 1;
    string original_vehicle_id = 2;
    string new_vehicle_id = 3;
}

message MissionCopiedEvent {
    string fleet_id = 1;
    string original_mission_id = 2;
    string new_mission_id = 3;
}

message FlightoperationCompletedEvent {
    string flightoperation_id = 1;
    Flightoperation flightoperation = 2;
}

message CopiedVehicleCreatedEvent {
    string vehicle_id = 1;
    string communication_id = 2;
    string fleet_id = 3;
}

message TelemetryUpdatedEvent {
    string communication_id = 1;
    Telemetry telemetry = 2;
}

message CopiedMissionCreatedEvent {
    string mission_id = 1;
    Mission mission = 2;
}
